# youtube-summarizer

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
services/: cache.py  config.py  extractor.py  llm.py  transcriber.py  utils.py
