[project]
name = "youtube-summarizer"
version = "0.1.0"
description = "Summarize YouTube videos with Gemini, captions, and Whisper fallback"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
    "youtube-transcript-api>=0.6.0",
    "yt-dlp>=2024.1.0",
    "groq>=0.4.0",
]

[project.optional-dependencies]
dev = ["black>=24.0.0"]

[tool.black]
line-length = 88
target-version = ["py311"]
